support jdbc4.2 date and time